# translategemma-studio

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  streamlit_app.py
.claude/: settings.json
.github/workflows/: ci.yml
.streamlit/: config.toml
tests/: conftest.py  test_languages.py  test_streamlit_app.py
