[project]
name = "translategemma-pipeline"
version = "0.12.0"
description = "Translate text with the Google TranslateGemma 4B model on Apple Silicon with MLX."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "mlx-lm",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
