[project]
name = "translategemma-studio"
version = "0.12.0"
description = "Translate text with the Google TranslateGemma 4B model on Apple Silicon with MLX."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "mlx-lm",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov>=7.1.0",
    "ruff",
    "ty",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
xfail_strict = true
filterwarnings = ["error"]

[tool.coverage.run]
source = ["streamlit_app", "languages"]
